perf: ParseTree field name cache + SWAR string scan
- Add NameCache: static hash-indexed field name cache (inspired by
  fastjson2's JSONFactory.NAME_CACHE). Repeated field names across
  parses share the same String instance, eliminating allocation.

- Add SWAR string scanning in UTF8 parser as fallback when Vector API
  is not available (JDK 21 without --add-modules). Scans 8 bytes at
  a time for quote/backslash/non-ASCII using zero-byte detection trick.

- Integrate name cache into base class readFieldName() to avoid
  ARM JIT regression (any override on UTF8 class destabilizes ARM
  JIT optimization of the bean parsing hot path).

Results (Quick profile, JDK 21, 16T):
- x86 ParseTreeString: +11.8%
- ARM bean parse: no regression (critical constraint)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>